--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>EL ANTOJO BAKERY - Marco Nicolas Villani</title>
+  <title>EL ANTOJO BAKERY - Marco Nicolas Villani - Curso React.js Coderhouse</title>
 </head>
 
 <body>
